# promptmin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_domain.md
.github/workflows/: ci.yml  publish.yml
examples/: corpus_domains.txt  corpus_sample.txt
src/promptmin/: __init__.py  benchmark.py  cli.py  engine.py  tokens.py
src/promptmin/dicts/: en.yaml  es.yaml  es_en.yaml  es_en_phrases.yaml
src/promptmin/dicts/domains/: ai.yaml  backend.yaml  data.yaml  devops.yaml  web.yaml
tests/: test_domains.py  test_engine.py  test_phrase_translation.py  test_tokens.py
